--- a/templates/index.html
+++ b/templates/index.html
@@ -6,4 +6,5 @@
 
 {% block body %}
 <h1> Witam na mojej stronie </h1>
+<a href="/aktywne.html"> Przejdź do strony z aktywnymi przypadkami</a>
 {% endblock %}
