--- a/templates/aktywne.html
+++ b/templates/aktywne.html
@@ -6,4 +6,5 @@
 
 {% block body %}
 <h1> Aktywne przypadki koronawirusa znajdują się na wykresie poniżej </h1>
+<img src="/plot.png" alt="Obrazek z wykresem">
 {% endblock %}
